syntax = "proto3";
import "message/error.proto";

package bs;
option go_package = "./proto";

// emit balance
message EmitBalanceByUserIdRequest{
  string id = 1;
  string user_id = 2;
  string currency_name = 3;
  double amount = 4;
}

message EmitBalanceByUserIdResponse{
  string id = 1;
  string user_id = 2;
  Balance balance = 3;
  error.Error error = 4;
}
//=======================================================


// Get Balance By User Id
message GetBalanceByUserIdRequest{
  string id = 1;
  string user_id = 2;
}

message GetBalanceByUserIdResponse{
  string id = 1;
  string user_id = 2;
  repeated Balance user_balance = 3;
  error.Error error = 4;
}

message Balance{
  string currency = 1;
  double balance = 2;
  double locked_balance = 3;
  int64 updated_date = 4;
}
//=======================================================

// Get All Pair
message GetAllPairRequest{
  string id = 1;
}

message GetAllPairResponse{
  string id = 1;
  repeated string pairs = 2;
}


